--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -370,14 +370,57 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rv_home_color_product" />
+            <TextView
+                android:id="@+id/tv_home_popular_photo_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="196dp"
+                android:text="인기사진 TOP 10"
+                android:textAppearance="@style/TextAppearance.headline01"
+                app:layout_constraintBottom_toTopOf="@id/tv_home_popular_photo_subtitle"
+                app:layout_constraintEnd_toStartOf="@id/tv_home_popular_photo_more"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_home_sectionbar8" />
+
+            <TextView
+                android:id="@+id/tv_home_popular_photo_more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="17dp"
+                android:layout_marginEnd="12dp"
+                android:text="더보기"
+                android:textAppearance="@style/TextAppearance.headline02"
+                app:layout_constraintBottom_toTopOf="@id/tv_home_popular_photo_subtitle"
+                app:layout_constraintStart_toEndOf="@id/tv_home_popular_photo_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_home_sectionbar8" />
+            <TextView
+                android:id="@+id/tv_home_popular_photo_subtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="172dp"
+                android:text="매일 1,2,3위에게 최대 1000P 지급!"
+                android:textAppearance="@style/TextAppearance.headline01"
+                app:layout_constraintBottom_toTopOf="@id/rv_home_popular_photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_home_popular_photo_title" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home_popular_photo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="18dp"
-                app:layout_constraintTop_toBottomOf="@id/iv_home_sectionbar8" />
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_popular_photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_home_popular_photo_subtitle" />
 
             <ImageView
                 android:id="@+id/iv_home_sectionbar9"
