--- a/app/src/main/res/layout/item_modern_contents.xml
+++ b/app/src/main/res/layout/item_modern_contents.xml
@@ -24,15 +24,29 @@
             app:shapeAppearanceOverlay="@style/Radius4" />
 
         <TextView
-            android:id="@+id/iv_home_modern_description"
+            android:id="@+id/tv_home_modern_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
             android:layout_marginEnd="6dp"
             android:text="@{contentsData.description}"
+            android:textColor="@color/main_color"
             android:textAppearance="@style/TextAppearance.caption02"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_home_modern_contents" />
+
+        <TextView
+            android:id="@+id/tv_home_modern_sub_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="11dp"
+            android:layout_marginEnd="6dp"
+            android:text="@{contentsData.subDescription}"
+            android:textColor="@color/black"
+            android:textAppearance="@style/TextAppearance.caption02"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_home_modern_description"
             app:layout_constraintTop_toBottomOf="@id/iv_home_modern_contents" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
