--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,11 @@
         <item name="android:padding">6dp</item>
         <item name="android:radius">15dp</item>
     </style>
+    <style name="RankingRectangleStyle">
+        <item name="android:background">@color/main_color</item>
+        <item name="android:backgroundTint">@color/main_color</item>
+        <item name="android:radius">4dp</item>
+    </style>
 
     <style name="TextAppearance.Title01" parent="">
         <item name="fontWeight">700</item>
