--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -145,6 +145,8 @@
                     android:overScrollMode="never"
                     android:layout_marginTop="10dp"
                     android:layout_marginHorizontal="16dp"
+                    app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
+                    android:orientation="horizontal"
                     app:layout_constraintTop_toBottomOf="@id/rv_content_detail"
                     tools:listitem="@layout/item_content_hashtag"
                     tools:itemCount="1"/>
@@ -216,6 +218,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     tools:listitem="@layout/item_content_userimage"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:orientation="horizontal"
                     tools:itemCount="1"
                     app:layout_constraintTop_toBottomOf="@id/iv_content_profile2"
                     app:layout_constraintStart_toStartOf="parent"/>
@@ -408,6 +412,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:orientation="horizontal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_content_todayrecommend"/>
 
@@ -437,8 +443,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="14dp"
+                    android:layout_marginStart="11dp"
+                    android:layout_marginEnd="11dp"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:spanCount="2"
                     app:layout_constraintTop_toBottomOf="@id/tv_content_userbest"
                     app:layout_constraintStart_toStartOf="parent"/>
 
