--- a/app/src/main/res/layout/item_content_detail.xml
+++ b/app/src/main/res/layout/item_content_detail.xml
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:src="@drawable/scrap_button"
+            android:src="@drawable/scrap_button_selector"
             app:layout_constraintBottom_toBottomOf="@id/iv_item_contentdetail"
             app:layout_constraintEnd_toEndOf="@id/iv_item_contentdetail"/>
 
