[mod] 폰트 패딩값 제거

--- a/app/src/main/res/layout/item_popular_contents.xml
+++ b/app/src/main/res/layout/item_popular_contents.xml
@@ -30,6 +30,7 @@
             android:layout_height="19dp"
             style="@style/RankingRectangleStyle"
             android:text="1"
+            android:includeFontPadding="false"
             android:textSize="7sp"
             android:textColor="@color/white"
             android:layout_marginEnd="125dp"
@@ -47,6 +48,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
             android:text="@{PopularContentsModel.title}"
+            android:includeFontPadding="false"
             android:textColor="@color/main_color"
             android:textAppearance="@style/TextAppearance.caption02"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,6 +63,7 @@
             android:layout_marginEnd="8dp"
             android:textColor="@color/black"
             android:text="@{PopularContentsModel.subTitle}"
+            android:includeFontPadding="false"
             android:textAppearance="@style/TextAppearance.caption02"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_home_popular_title"
