--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -30,6 +30,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="30dp"
             android:text="@{contentsData.description}"
+            android:includeFontPadding="false"
             android:textColor="@color/main_color"
             android:textAppearance="@style/TextAppearance.caption01"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@{contentsData.subDescription}"
+            android:includeFontPadding="false"
             android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.body01"
             app:layout_constraintEnd_toEndOf="parent"
