--- a/app/src/main/res/layout/item_category_product.xml
+++ b/app/src/main/res/layout/item_category_product.xml
@@ -30,6 +30,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
             android:textAlignment="center"
+            android:includeFontPadding="false"
             android:text="@{contentsData.description}"
             android:textAppearance="@style/TextAppearance.caption02"
             app:layout_constraintEnd_toEndOf="parent"
