--- a/app/src/main/res/layout/item_color_product.xml
+++ b/app/src/main/res/layout/item_color_product.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -29,25 +30,28 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@{BestProductModel.brand}"
-            android:layout_marginEnd="140dp"
+            tools:text="헬로우슬립"
+            android:includeFontPadding="false"
             android:textColor="@color/dark_grey"
-            android:textAppearance="@style/TextAppearance.body02"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textAppearance="@style/TextAppearance.miniCaption02"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_color_interior_image" />
 
         <TextView
             android:id="@+id/tv_color_interior_title"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
+            android:includeFontPadding="false"
             android:text="@{BestProductModel.postTitle}"
-            android:textAppearance="@style/TextAppearance.body02"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textAppearance="@style/TextAppearance.miniCaption02"
+            app:layout_constraintBottom_toTopOf="@id/layout"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_color_interior_brand" />
+            app:layout_constraintTop_toBottomOf="@id/tv_color_interior_brand"
+            tools:text="LED 오로라 블루투스 스\n피커 무드등 인기상품임..." />
 
         <LinearLayout
+            android:id="@+id/layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,9 +62,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
+                android:includeFontPadding="false"
+                tools:text="56%"
                 android:text="@{BestProductModel.discount}"
                 android:textColor="@color/main_color"
-                android:textAppearance="@style/TextAppearance.title01" />
+                android:textAppearance="@style/TextAppearance.caption01" />
 
             <TextView
                 android:id="@+id/tv_color_interior_price"
@@ -68,8 +74,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:text="@{BestProductModel.price}"
+                tools:text="34,900"
+                android:includeFontPadding="false"
                 android:textColor="@color/black"
-                android:textAppearance="@style/TextAppearance.title01" />
+                android:textAppearance="@style/TextAppearance.caption01" />
         </LinearLayout>
 
 
