--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -17,8 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@{context.getDrawable(contentsData.image)}"
-            android:layout_marginEnd="22dp"
-            style="@style/IconBackgroundStyle"
+            android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,11 +25,13 @@
             android:id="@+id/tv_home_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:textAlignment="center"
             android:textSize="11sp"
             android:text="@{contentsData.description}"
+            android:includeFontPadding="false"
             app:layout_constraintEnd_toEndOf="parent"
+            android:textAppearance="@style/TextAppearance.caption01"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_home_menu" />
     </androidx.constraintlayout.widget.ConstraintLayout>
