--- a/app/src/main/res/layout/item_modern_contents.xml
+++ b/app/src/main/res/layout/item_modern_contents.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -19,6 +20,7 @@
             android:scaleType="centerCrop"
             android:layout_marginEnd="6dp"
             android:src="@{context.getDrawable(contentsData.image)}"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/Radius4" />
@@ -30,9 +32,10 @@
             android:layout_marginTop="11dp"
             android:layout_marginEnd="6dp"
             android:text="@{contentsData.description}"
+            tools:text="간결해진삶에"
+            android:includeFontPadding="false"
             android:textColor="@color/main_color"
             android:textAppearance="@style/TextAppearance.caption02"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_home_modern_contents" />
 
@@ -43,9 +46,9 @@
             android:layout_marginTop="11dp"
             android:layout_marginEnd="6dp"
             android:text="@{contentsData.subDescription}"
+            android:includeFontPadding="false"
             android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.caption02"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_home_modern_description"
             app:layout_constraintTop_toBottomOf="@id/iv_home_modern_contents" />
     </androidx.constraintlayout.widget.ConstraintLayout>
