--- a/app/src/main/res/layout/item_recommend_home.xml
+++ b/app/src/main/res/layout/item_recommend_home.xml
@@ -27,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
                 android:text="@{RecommendHomeModel.title}"
+                android:includeFontPadding="false"
                 android:textAppearance="@style/TextAppearance.caption02"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
