--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,19 +3,18 @@
     <style name="Radius4">
         <item name="cornerSize">4dp</item>
     </style>
-
-    <style name="IconBackgroundStyle">
-        <item name="android:color">@color/grey</item>
-        <item name="android:layout_margin">6dp</item>
-        <item name="android:padding">6dp</item>
-        <item name="android:radius">15dp</item>
-    </style>
     <style name="RankingRectangleStyle">
         <item name="android:background">@color/main_color</item>
         <item name="android:backgroundTint">@color/main_color</item>
-        <item name="android:radius">4dp</item>
+        <item name="cornerSize">4dp</item>
     </style>
-
+    <style name="HomePointTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:layout_width">84dp</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:background">@color/point_color</item>
+        <item name="android:padding">4dp</item>
+        <item name="cornerSize">4dp</item>
+    </style>
     <style name="TextAppearance.Title01" parent="">
         <item name="fontWeight">700</item>
         <item name="android:fontFamily">@font/notosans_bold_font</item>
