--- a/app/src/main/res/drawable/scrap_button_selector.xml
+++ b/app/src/main/res/drawable/scrap_button_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/scrap_button" android:state_checked="false"/>
-    <item android:drawable="@drawable/scrap_button_clicked" android:state_checked="true"/>
+    <item android:drawable="@drawable/scrap_button" android:state_selected="false"/>
+    <item android:drawable="@drawable/scrap_button_clicked" android:state_selected="true"/>
 </selector>
