--- a/app/src/main/res/layout/item_popular_contents.xml
+++ b/app/src/main/res/layout/item_popular_contents.xml
@@ -28,10 +28,11 @@
             android:id="@+id/tv_home_popular_ranking"
             android:layout_width="19dp"
             android:layout_height="19dp"
-            style="@style/RankingRectangleStyle"
-            android:text="1"
+            android:background="@drawable/rectanglewithcorner"
+            android:text="@{PopularContentsModel.rate}"
             android:includeFontPadding="false"
             android:textSize="7sp"
+            android:gravity="center"
             android:textColor="@color/white"
             android:layout_marginEnd="125dp"
             android:textAlignment="center"
