--- a/app/src/main/res/layout/item_color_interior.xml
+++ b/app/src/main/res/layout/item_color_interior.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/iv_color_interior_image"
+            android:id="@+id/iv_best_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@{context.getDrawable(contentsData.image)}"
