--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -26,13 +27,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:textAlignment="center"
             android:textSize="11sp"
+            android:gravity="center"
+            tools:text="쇼핑하기"
             android:text="@{contentsData.description}"
             android:includeFontPadding="false"
-            app:layout_constraintEnd_toEndOf="parent"
             android:textAppearance="@style/TextAppearance.caption01"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_home_menu" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
