[mod] 변수명 camel case로 수정, 기타 코드 수

--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -65,7 +65,7 @@
                     android:id="@+id/tv_content_username1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@{data.user_name}"
+                    android:text="@{data.userName}"
                     tools:text="@string/nickname"
                     android:layout_marginStart="10dp"
                     android:includeFontPadding="false"
@@ -79,7 +79,7 @@
                     android:id="@+id/tv_content_createddate1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@{data.created_date}"
+                    android:text="@{data.createdDate}"
                     tools:text="@string/created_date"
                     android:layout_marginTop="3dp"
                     android:includeFontPadding="false"
@@ -116,7 +116,7 @@
                     android:id="@+id/tv_content_optiontag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{data.option_tag}"
+                    android:text="@{data.optionTag}"
                     tools:text="@string/option_tag"
                     android:textColor="@color/dark_grey"
                     android:includeFontPadding="false"
@@ -173,7 +173,7 @@
                     android:id="@+id/tv_content_username2"
                     android:layout_width="0dp"
                     android:layout_height="20dp"
-                    android:text="@{data.user_name}"
+                    android:text="@{data.userName}"
                     tools:text="@string/nickname"
                     android:layout_marginStart="10dp"
                     android:includeFontPadding="false"
@@ -187,7 +187,7 @@
                     android:id="@+id/tv_content_createddate2"
                     android:layout_width="0dp"
                     android:layout_height="17dp"
-                    android:text="@{data.created_date}"
+                    android:text="@{data.createdDate}"
                     tools:text="@string/created_date"
                     android:layout_marginTop="3dp"
                     android:includeFontPadding="false"
@@ -236,7 +236,7 @@
                     android:id="@+id/tv_content_likecount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{data.like_count}"
+                    android:text="@{data.likeCount}"
                     tools:text="@string/like"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="14dp"
@@ -249,7 +249,7 @@
                     android:id="@+id/tv_content_scrapcount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{data.scrap_count}"
+                    android:text="@{data.scrapCount}"
                     tools:text="@string/scrap"
                     android:layout_marginStart="12dp"
                     android:includeFontPadding="false"
@@ -261,7 +261,7 @@
                     android:id="@+id/tv_content_commentcount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{data.comment_count}"
+                    android:text="@{data.commentCount}"
                     tools:text="@string/comment"
                     android:layout_marginStart="12dp"
                     android:includeFontPadding="false"
@@ -273,7 +273,7 @@
                     android:id="@+id/tv_content_viewcount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{data.view_count}"
+                    android:text="@{data.viewCount}"
                     tools:text="조회수"
                     android:layout_marginStart="12dp"
                     android:includeFontPadding="false"
@@ -315,7 +315,7 @@
                     android:id="@+id/tv_content_username3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@{data.user_name}"
+                    android:text="@{data.userName}"
                     android:layout_marginStart="10dp"
                     android:includeFontPadding="false"
                     android:textColor="@color/black"
