--- a/app/src/main/res/layout/custom_snackbar.xml
+++ b/app/src/main/res/layout/custom_snackbar.xml
@@ -15,7 +15,7 @@
             android:id="@+id/tv_custom_snackbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text = "스크랩했습니다."
+            android:text = "@string/scraped"
             android:includeFontPadding="false"
             android:textColor="@color/black"
             android:theme="@style/TextAppearance.body01"
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="38dp"
             android:background="@drawable/snackbar_btn_folder"
-            android:text="폴더에 담기"
+            android:text="@string/btn_folder"
             android:textColor="@color/white"
             android:theme="@style/TextAppearance.headline01"
             android:paddingHorizontal="10dp"
@@ -44,7 +44,7 @@
             android:id="@+id/btn_custom_snackbar_scrap"
             android:layout_width="wrap_content"
             android:layout_height="38dp"
-            android:text="스크랩북 보기"
+            android:text="@string/btn_scrapbook"
             android:paddingHorizontal="10dp"
             android:background="@drawable/snackbar_btn_scrapbook"
             android:textColor="@color/main_color"
