--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -8,8 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/shape">
+        android:layout_height="wrap_content">
 
         <Space
             android:id="@+id/bottom_layout"
@@ -28,18 +27,19 @@
             android:layout_marginTop="13dp"
             android:textAppearance="@style/TextAppearance.Title01"
             android:textSize="18sp"
+            android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/iv_bottom_close"
             app:layout_constraintTop_toBottomOf="@id/bottom_layout"
             app:layout_constraintBottom_toTopOf="@id/iv_bottom_cell1"
-            android:text="폴더 선택"/>
+            android:text="@string/tv_btsheet_title"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/iv_bottom_close"
             android:layout_marginStart="113dp"
-            android:layout_marginEnd="13dp"
+            android:layout_marginEnd="16dp"
             android:src="@drawable/ic_close"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bottom_layout"
@@ -71,7 +71,8 @@
             app:layout_constraintStart_toEndOf="@id/iv_bottom_cell1"
             app:layout_constraintBottom_toTopOf="@id/v_section_1"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="새로운 폴더 추가하기"/>
+            android:includeFontPadding="false"
+            android:text="@string/tv_btsheet_1"/>
 
         <View
             android:id="@+id/v_section_1"
@@ -109,7 +110,8 @@
             app:layout_constraintStart_toEndOf="@id/iv_bottom_cell2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/v_section_2"
-            android:text="내 취향 인테리어 " />
+            android:includeFontPadding="false"
+            android:text="@string/tv_btsheet_2" />
 
         <View
             android:id="@+id/v_section_2"
@@ -146,7 +148,8 @@
             app:layout_constraintStart_toEndOf="@id/iv_bottom_cell3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/v_section_3"
-            android:text="친구 집들이 선물 " />
+            android:includeFontPadding="false"
+            android:text="@string/tv_btsheet_3" />
 
         <View
             android:id="@+id/v_section_3"
@@ -158,7 +161,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_bottom_cell3"
             android:background="@color/light_grey" />
-
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -183,7 +185,8 @@
             app:layout_constraintStart_toEndOf="@id/iv_bottom_cell4"
             app:layout_constraintBottom_toTopOf="@id/v_section_5"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="인테리어 꿀팁 모음 " />
+            android:includeFontPadding="false"
+            android:text="@string/tv_btsheet_4" />
 
         <View
             android:id="@+id/v_section_5"
@@ -196,5 +199,9 @@
             app:layout_constraintTop_toBottomOf="@id/iv_bottom_cell4"
             android:background="@color/light_grey" />
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="212dp"
+            app:layout_constraintTop_toBottomOf="@id/v_section_5"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
