--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -303,7 +303,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:layout_marginEnd="105dp"
-                android:text="01:31:17 남음"
+                android:text="@string/string_home_deal_time"
                 android:textColor="@color/white"
                 style="@style/HomePointTextViewStyle"
                 android:includeFontPadding="false"
@@ -318,7 +318,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="20dp"
-                android:text="[오늘의딜] 23년신상! 보랄 무\n선 선풍기 미니"
+                android:text="@string/string_deal_text1"
                 android:includeFontPadding="false"
                 android:textAppearance="@style/TextAppearance.caption02"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -331,7 +331,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="85dp"
-                android:text="84%"
+                android:text="@string/string_home_discount"
                 android:includeFontPadding="false"
                 android:textSize="50sp"
                 android:textStyle="bold"
@@ -345,7 +345,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="100dp"
-                android:text="특가 832개 보기"
+                android:text="@string/string_home_text2"
                 android:textColor="@color/point_color"
                 android:includeFontPadding="false"
                 android:textAppearance="@style/TextAppearance.caption01"
@@ -467,7 +467,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="196dp"
-                android:text="인기사진 TOP 10"
+                android:text="@string/string_home_popular_photo"
                 android:includeFontPadding="false"
                 android:textAppearance="@style/TextAppearance.headline01"
                 app:layout_constraintBottom_toTopOf="@id/tv_home_popular_photo_subtitle"
@@ -481,7 +481,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="17dp"
                 android:layout_marginEnd="12dp"
-                android:text="더보기"
+                android:text="@string/string_home_popular_photo_more"
                 android:textColor="@color/main_color"
                 android:includeFontPadding="false"
                 android:textAppearance="@style/TextAppearance.headline02"
@@ -496,7 +496,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="172dp"
-                android:text="매일 1,2,3위에게 최대 1000P 지급!"
+                android:text="@string/string_home_popular_photo_text"
                 android:includeFontPadding="false"
                 android:textAppearance="@style/TextAppearance.caption02"
                 app:layout_constraintBottom_toTopOf="@id/rv_home_popular_photo"
@@ -649,7 +649,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="17dp"
                 android:layout_marginEnd="263dp"
-                android:text="베스트"
+                android:text="@string/string_home_best"
                 android:includeFontPadding="false"
                 android:textAppearance="@style/TextAppearance.headline01"
                 app:layout_constraintBottom_toTopOf="@id/home_tabLayout"
