--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Radius4">
-        <item name="cornerSize">4dp</item>
-    </style>
 
-
-    <style name="RankingRectangleStyle">
-        <item name="android:background">@color/main_color</item>
-        <item name="android:backgroundTint">@color/main_color</item>
-        <item name="cornerSize">4dp</item>
-    </style>
+    <!--  TextView Style  -->
     <style name="HomePointTextViewStyle" parent="android:Widget.TextView">
         <item name="android:layout_width">84dp</item>
         <item name="android:layout_height">20dp</item>
@@ -17,6 +9,18 @@
         <item name="android:padding">4dp</item>
         <item name="cornerSize">4dp</item>
     </style>
+    <!--  ImageView Style  -->
+    <style name="Radius4">
+        <item name="cornerSize">4dp</item>
+    </style>
+
+    <style name="RankingRectangleStyle">
+        <item name="android:background">@color/main_color</item>
+        <item name="android:backgroundTint">@color/main_color</item>
+        <item name="cornerSize">4dp</item>
+    </style>
+
+    <!--  Text Style  -->
     <style name="TextAppearance.Title01" parent="">
         <item name="fontWeight">700</item>
         <item name="android:fontFamily">@font/notosans_bold_font</item>
