--- a/app/src/main/res/layout/custom_snackbar.xml
+++ b/app/src/main/res/layout/custom_snackbar.xml
@@ -1,60 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
-        
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_custom_snackbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text = "@string/scraped"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="17dp"
             android:includeFontPadding="false"
+            android:text="@string/scraped"
             android:textColor="@color/black"
             android:theme="@style/TextAppearance.body01"
-            android:layout_marginTop="17dp"
-            android:layout_marginStart="15dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_custom_snackbar_folder"
             android:layout_width="wrap_content"
             android:layout_height="38dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/snackbar_btn_folder"
+            android:includeFontPadding="false"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="8dp"
             android:text="@string/btn_folder"
             android:textColor="@color/white"
             android:theme="@style/TextAppearance.headline01"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="8dp"
-            android:includeFontPadding="false"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_custom_snackbar_scrap"
             android:layout_width="wrap_content"
             android:layout_height="38dp"
-            android:text="@string/btn_scrapbook"
-            android:paddingHorizontal="10dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="40dp"
             android:background="@drawable/snackbar_btn_scrapbook"
+            android:includeFontPadding="false"
+            android:paddingHorizontal="10dp"
+            android:text="@string/btn_scrapbook"
             android:textColor="@color/main_color"
             android:theme="@style/TextAppearance.headline01"
-            android:includeFontPadding="false"
-            android:layout_marginEnd="6dp"
-            app:layout_constraintTop_toTopOf="@id/btn_custom_snackbar_folder"
-            app:layout_constraintEnd_toStartOf="@id/btn_custom_snackbar_folder"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_custom_snackbar_folder"
+            app:layout_constraintTop_toTopOf="@id/btn_custom_snackbar_folder" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    
+
 </layout>
